# GMTP

./: .gitignore  README.md  debug_log.py  eval.py  pyproject.toml  sim2sim_eval.py  train.py
.github/workflows/: ci.yml
configs/: motion_mae_actor_motion_obs_cmu_omomo_w10_f10.json  motion_mae_actor_motion_obs_cmu_omomo_w10_f15.json  motion_mae_actor_motion_obs_cmu_omomo_w10_f5.json  motion_mae_assets_best_by_motion.json  motion_mae_assets_best_by_window.json  motion_mae_assets_regularized.json  motion_mae_assets_smoke.json  motion_mae_cmu_omomo_sweep_compact.json  motion_mae_cmu_omomo_sweep_fast_lr.json  motion_mae_cmu_omomo_sweep_wide.json  motion_mae_cmu_omomo_sweep_wide_fast_lr.json  motion_mae_cmu_omomo_wide_fast_lr_full.json  motion_mae_policy_obs_compact_g1_23dof.json  motion_vae_61_10_stageii.json  motion_vae_61_10_stageii_long120.json  motion_vae_61_10_stageii_lowbeta64.json  motion_vae_61_10_stageii_policyfocus.json  motion_vae_61_10_stageii_policyfocus240.json
debug_logs/isaac/: 20260328_132604_recurrent_final_20260328_145234.json  20260328_132604_recurrent_final_20260328_145234.npz
debug_logs/sim2sim/: 20260328_132604_recurrent_final_00_120_01_stageii.json  20260328_132604_recurrent_final_00_120_01_stageii.npz
docs/: actor_critic_design_recommendations.md
env/: cfg.py  motions.py
env/assests/: 01_01_stageii.npz  02_04_stageii.npz  05_03_stageii.npz  05_04_stageii.npz  05_05_stageii.npz  06_13_stageii.npz  108_08_stageii.npz  (+46 more)
model/: actor.py  adain.py  critic.py
test_scripts/: deploy_mujoco.py
tests/: test_debug_log.py  test_recurrent_actor.py
(+86 files in other folders)
